@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.61
+Release: 0.62
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -470,7 +470,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
-* Wed Jan 22 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.61
+* Mon Jan 27 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.67
+- fix: more debugedit.c problems.
+
+* Sat Jan 25 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.61
 - permit anaconda to choose "presentation order".
 
 * Wed Jan 22 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.60
